--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Title-Font;
+  src: url("../../assets/fonts/BowlbyOne-Regular.ttf");
+}
+
 .background-image {
   width: 100%;
   height: 100vh;
@@ -13,8 +18,38 @@
 
 .title {
   position: absolute;
+  font-family: Title-Font;
+  font-size: 50px;
+  color: rgb(232, 222, 197);
+  text-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
+  left: 30px;
+  top: 200px;
 }
 
 .text {
   position: absolute;
+  font-family: Title-Font;
+  font-size: 20px;
+  color: rgb(232, 222, 197);
+  text-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
+  left: 80px;
+  top: 300px;
+}
+
+.quiz-button {
+  position: absolute;
+  left: 25%;
+  top: 400px;
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+  font-family: Title-Font;
+  box-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
 }
