--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -53,3 +53,72 @@
   font-family: Title-Font;
   box-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
 }
+
+.arrow-down {
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform: rotate(0deg);
+  cursor: pointer;
+}
+
+.arrow span {
+  display: block;
+  width: 1.5vw;
+  height: 1.5vw;
+  border-bottom: 5px solid white;
+  border-right: 5px solid white;
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+
+/* ABOUT */
+
+.arrow-up {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+
+.background-about {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: relative;
+  background-color: #cde53e;
+}
+
+.about {
+  font-family: Title-Font;
+  font-size: 20px;
+  color: white;
+  text-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
+  padding: 20px;
+}
