--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
 body {
   margin: 0;
+  scroll-behavior: smooth;
+  transition-duration: 0.2s; /* Podesite željeno trajanje animacije (u sekundama) */
+  transition-timing-function: ease-in-out; /* Podesite željenu funkciju ubrzanja/sporazuma */
 }
