--- a/src/components/quiz/Quiz.module.css
+++ b/src/components/quiz/Quiz.module.css
@@ -31,102 +31,7 @@
   -webkit-font-smoothing: antialiased;
 }
 
-.quiz-background h1,
-.quiz-background h2,
-.quiz-background h3 {
-  font-family: sofia-pro, sans-serif;
-  font-weight: 600;
-  font-style: normal;
-}
-
-.quiz-background h1 {
-  font-size: 36px;
-  font-weight: 700;
-  letter-spacing: -1px;
-  line-height: 1.2;
-  text-align: center;
-  margin: 100px 0 40px;
-}
-
-.quiz-background h2 {
-  font-weight: 400;
-  margin: 50px 0 10px;
-}
-
-.quiz-background p {
-  margin: 0 0 30px 0;
-  font-size: 18px;
-}
-
-.menu {
-  filter: drop-shadow(1px 1px 1px #5116a9);
-  width: 300px;
-}
-
-.quiz-background ul {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  background: var(--accent);
-}
-
-.quiz-background li {
-  color: var(--background);
-  display: block;
-  transform-origin: -20px 50%;
-}
-
-.quiz-background ul,
-.quiz-background li {
-  list-style: none;
-  margin: 0;
-  padding: 10px;
-}
-
-.quiz-background button {
-  -webkit-appearance: button;
-  background: var(--accent);
-  color: var(--background);
-  border: none;
-  border-radius: 10px;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: 700;
-  cursor: pointer;
-  width: 100%;
-  text-align: left;
-  margin-bottom: 10px;
+.filters {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-
-.quiz-background button path {
-  fill: var(--background);
-}
-
-.quiz-background input {
-  accent-color: var(--accent);
-}
-
-.controls {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  padding-bottom: 50px;
-  align-items: center;
-}
-
-.item {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  background: var(--accent);
-  color: var(--background);
-  font-size: 240px;
-  line-height: 260px;
-  font-weight: 700;
-  border-radius: 30px;
 }
