--- a/src/components/quiz/Quiz.module.css
+++ b/src/components/quiz/Quiz.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Title-Font;
+  src: url("../../assets/fonts/BowlbyOne-Regular.ttf");
+}
+
 .quiz-background {
   width: 100%;
   height: 100vh;
@@ -34,4 +39,15 @@
 .filters {
   display: flex;
   justify-content: space-between;
+}
+
+.start {
+  position: absolute;
+  font-family: Title-Font;
+  width: 100%;
+  font-size: 50px;
+  color: rgb(255, 255, 255);
+  text-shadow: 5px 5px 10px rgba(95, 75, 62, 0.5);
+  text-align: center;
+  bottom: 300px;
 }
