--- a/src/components/ui/DropDown.module.css
+++ b/src/components/ui/DropDown.module.css
@@ -31,6 +31,8 @@
   flex-direction: column;
   gap: 10px;
   background: var(--accent);
+  z-index: 10;
+  position: relative;
 }
 
 .drop-down li {
